[GTK] Several tests fail due to assert not reached in DrawingArea::dispatchAfterEnsuringDrawing() https://bugs.webkit.org/show_bug.cgi?id=153785

Patch by Adrien Plazas <aplazas@igalia.com> on 2016-02-02
Reviewed by Carlos Garcia Campos.

* UIProcess/DrawingAreaProxyImpl.cpp:
(WebKit::DrawingAreaProxyImpl::dispatchAfterEnsuringDrawing):
* UIProcess/DrawingAreaProxyImpl.h:

Canonical link: https://commits.webkit.org/171867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196005 268f45cc-cd09-0410-ab3c-d52691b4dbfc